--- a/package.json
+++ b/package.json
@@ -31,13 +31,16 @@
     "file-loader": "^4.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.4",
+    "glob-all": "^3.1.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
+    "mocha": "^6.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "px2rem-loader": "^0.1.9",
     "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.3",
     "style-loader": "^0.23.1",
     "url-loader": "^2.0.0",
     "webpack": "^4.35.0",
