--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/_mocha",
+    "istanbul": "istanbul cover ./node_modules/.bin/_mocha",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack-dev-server --config webpack.dev.js --open",
     "build:ssr": "webpack --config webpack.ssr.js",
@@ -15,6 +16,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "and": "0.0.3",
+    "assert": "^2.0.0",
     "autoprefixer": "^9.6.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
@@ -34,6 +36,7 @@
     "glob-all": "^3.1.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^3.2.0",
+    "istanbul": "^0.4.5",
     "mini-css-extract-plugin": "^0.7.0",
     "mocha": "^6.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
