--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "./node_modules/.bin/_mocha",
     "istanbul": "istanbul cover ./node_modules/.bin/_mocha",
     "build": "webpack --config webpack.prod.js",
+    "build:stats": "webpack --config webpack.prod.js --json > stats.json",
     "dev": "webpack-dev-server --config webpack.dev.js --open",
     "build:ssr": "webpack --config webpack.ssr.js",
     "lint-fix": "eslint --ext .jsx,.js src/ --fix"
