--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "px2rem-loader": "^0.1.9",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.3",
+    "speed-measure-webpack-plugin": "^1.3.1",
     "style-loader": "^0.23.1",
     "url-loader": "^2.0.0",
     "webpack": "^4.35.0",
+    "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2"
   },
