--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:stats": "webpack --config webpack.prod.js --json > stats.json",
     "dev": "webpack-dev-server --config webpack.dev.js --open",
     "build:ssr": "webpack --config webpack.ssr.js",
+    "dll": "webpack --config webpack.dll.js",
     "lint-fix": "eslint --ext .jsx,.js src/ --fix"
   },
   "devDependencies": {
